fix naming or list
i had an issue with the index naming of unorderedlist

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="./recipes/karak.html">Lasagna Recipe</a></li>
-        <li><a href="./recipes/rice.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/karak.html">karak Recipe</a></li>
+        <li><a href="./recipes/rice.html">rice Recipe</a></li>
     </ul>
 </body>
 </html>
